# np-orders-checker

./: .gitignore  .tool-versions  LICENSE  README.md  package-lock.json  package.json  turbo.json
.github/: copilot-instructions.md
apps/api/: .env.example  .gitignore  README.md  alembic.ini  lifespan.py  main.py  package.json  pyproject.toml  requirements.txt  settings.py
apps/api/app/: router.py
apps/api/app/helpers/: auth_helper.py
apps/api/app/models/: order_schema.py  user_schema.py
apps/api/app/routers/: __init__.py  order_route.py  user_route.py
apps/api/app/services/: order_service.py  user_service.py
apps/api/db/: base.py  main.py
apps/api/db/migrations/: env.py
apps/api/db/migrations/versions/: 2026-01-05-10-09_461546ee29be.py  2026-01-05-11-17_009f39a1a5d2.py  2026-01-05-12-39_9d864dd7754c.py  2026_01_04_2241-ce0b5ecbfb6f_.py
apps/api/db/models/: __init__.py  orders_model.py  user_orders_model.py  users_model.py
apps/web/: eslint.config.mjs  package.json  playwright.config.ts  tsconfig.json
apps/web/e2e/: README.md  api.spec.ts  auth.spec.ts  homepage.spec.ts  users-flow.spec.ts  users.spec.ts
apps/web/e2e/pages/: users.page.ts
apps/web/src/: proxy.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/components/: Header.tsx
apps/web/src/app/contexts/: UserContext.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/pages/: OrdersPage.tsx  UsersPage.tsx
apps/web/src/app/profile/: page.tsx
apps/web/src/app/styles/: globals.css  styles.ts  theme.ts
apps/web/src/app/types/: types.ts  (+1 more)
apps/web/src/lib/: auth.ts
(+20 files in other folders)
